# bitfunctor

./: .gitignore  bitfunctor.cabal  bitfunctor.cabal~  params.conf
data/: bool.json  eqge.json  head.json  headinsert.json  insert.json  insert_sorted.json  nat.json  natge.json  natgeswap.json  natgt.json  natlist.json  sort.json  sort_sorted.json  sorted.json
src/: Account.hs  Block.hs  Blockchain.hs  Constants.hs  Main.hs  Simulation.hs  Theory.hs  Transaction.hs  Utils.hs
