name:                bitfunctor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            bitfunctor.net
-- license:
-- license-file:        LICENSE
author:              andruiman
maintainer:          andruiman@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable bitfunctor
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends: base,
                 ConfigFile -any,
                 SHA -any,
                 MissingH -any,
                 directory -any,
                 containers -any,
                 binary -any,
                 bytestring -any,
                 random -any,
                 aeson,
                 base16-bytestring,
                 text,
                 directory
  hs-source-dirs:      src
  default-language:    Haskell2010
